Fix - Add correct margin to h4, fix alignment of table

--- a/css/base/typography.scss
+++ b/css/base/typography.scss
@@ -77,7 +77,7 @@ h3, .h3 {
 h4, .h4 {
     font-size: $font-size-default;
     font-weight: 600;
-    margin-bottom: 0;
+    margin-bottom: .5rem;
 }
 
 .text-align {
