--- a/css/components/table.scss
+++ b/css/components/table.scss
@@ -71,6 +71,7 @@
 
     td {
         border-bottom: 1px solid $color-black-20;
+        vertical-align: top;
     }
 
     &--sortable {
